<resources>
    <string name="app_name">Movie App</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>

    <string name="episode">Episode:</string>
    <string name="popularity">Popularity:</string>
    <string name="vote_count">Vote Count:</string>


    <string name="search">Search</string>
    <string name="search_hint">Type title...</string>

    <!-- SETTING PREFERENCE -->
    <string name="change_language">Change Language</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_reminder_summary">Reminder showing the movie released today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_summary">Reminder for return to app</string>

    <string name="key_release_reminder" translatable="false">key_release_reminder</string>
    <string name="key_daily_reminder" translatable="false">key_daily_reminder</string>
    <string name="key_change_language" translatable="false">key_change_language</string>
    <!-- END SETTING PREFERENCE -->

    <string name="notification_daily_reminder_text">Have you checked the movie to be watched today?</string>
    <string name="notification_release_text">%1$s has been released today!</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">Data is Empty</string>
    <string name="view_trailer">View Trailer</string>
    <string name="actor">Actor</string>

    <string name="home">Home</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="recommendation">Recommendation</string>
    <string name="now_playing">Now Playing</string>
    <string name="ready_to_choose_your_next_movie_list">Ready to choose your next movie list?</string>
    <string name="hi_there">Hi, there</string>

</resources>
