<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="@string/key_change_language"
        android:summary="@string/change_language"
        android:title="@string/change_language"
        app:iconSpaceReserved="false"
        />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_release_reminder"
        android:summary="@string/release_reminder_summary"
        android:title="@string/release_reminder"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_daily_reminder"
        android:summary="@string/daily_reminder_summary"
        android:title="@string/daily_reminder"
        app:iconSpaceReserved="false" />

</PreferenceScreen>